Minor test file changes

--- a/trunk/keys3.tex
+++ b/trunk/keys3.tex
@@ -1,4 +1,3 @@
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % This is a demonstration file for keys3, an experimental package for
 % key management in LaTeX3.  The file should compile giving two
@@ -119,7 +118,9 @@
   key seven/.value required:,
   key eight/.value forbidden:,
   key seven,
+  key seven = Material,
   key eight = Stuff,
+  key eight,
 }
 
 % Code can be added to the left or right of existing keys. The added
